# Ace.Agent

./: .editorconfig  .gitignore  .gitmodules  AceAgent.sln  AceAgent开发计划文档.md  AceAgent开发需求文档.md  CKG工具完整实现方案.md  CKG工具极简实现方案.md  CKG工具简化实现方案.md  Directory.Build.props  LICENSE  README.md  README.zh.md  config.example.yaml  test_sample.cs  trae-agent工具对比分析.md  功能对比报告.md  开发需求文档.md
.github/workflows/: build-native.yml
docs/: Configuration.md
src/AceAgent.CLI/: AceAgent.CLI.csproj  Program.cs  TestSample.cs  test_debug  test_debug.c  test_native  test_native.c  test_parse_json  test_parse_json.c
src/AceAgent.CLI/Services/: AgentService.cs  ConfigurationService.cs  TrajectoryService.cs
src/AceAgent.Core/: Class1.cs
src/AceAgent.Core/Interfaces/: ILLMProvider.cs  ITool.cs  ITrajectoryRecorder.cs
src/AceAgent.Core/Models/: LLMOptions.cs  Message.cs  ModelInfo.cs  ModelResponse.cs  ToolInput.cs  ToolResult.cs  Trajectory.cs
src/AceAgent.Infrastructure/: AceAgent.Infrastructure.csproj  Class1.cs  SqliteTrajectoryRecorder.cs
src/AceAgent.LLM/: AceAgent.LLM.csproj  AnthropicProvider.cs  Class1.cs  DoubaoProvider.cs  LLMProviderFactory.cs  OpenAIProvider.cs
src/AceAgent.Services/: AceAgent.Services.csproj  LakeviewService.cs
src/AceAgent.Services/Models/: LakeviewModels.cs
src/AceAgent.Tools/: AceAgent.Tools.csproj  BashTool.cs  CKGTool.cs  FileEditTool.cs  ListDirTool.cs  SequentialThinkingTool.cs  TaskDoneTool.cs  ViewFilesTool.cs  WebSearchTool.cs
src/AceAgent.Tools/CKG/: CKGService.cs
src/AceAgent.Tools/CKG/Data/: CKGDbContext.cs
src/AceAgent.Tools/CKG/Models/: CodeElement.cs  ParseResult.cs
src/AceAgent.Tools/CKG/Services/: TreeSitterService.cs
src/AceAgent.Tools/CKG/native/: CMakeLists.txt  README.md  test_all_languages.c  test_language_support.c
src/AceAgent.Tools/CKG/native/test_files/: Test.java  test.cpp  test.go  test.ts
src/AceAgent.Tools/CKG/native/tests/: debug_test  debug_test.c  run_all_tests.c  test_c_parser  test_c_parser.c  test_cpp_parser.c  test_csharp_parser.c  test_framework.h  test_go_parser.c  test_java_parser.c  test_javascript_parser.c  test_python_parser.c  test_typescript_parser.c
src/AceAgent.Tools/CKG/native/tests/debug_test.dSYM/Contents/Resources/DWARF/: debug_test
src/AceAgent.Tools/CKG/native/tests/debug_test.dSYM/Contents/Resources/Relocations/aarch64/: debug_test.yml
src/AceAgent.Tools/CKG/native/tests/test_c_parser.dSYM/Contents/: Info.plist
src/AceAgent.Tools/CKG/native/tests/test_c_parser.dSYM/Contents/Resources/DWARF/: test_c_parser
src/AceAgent.Tools/CKG/native/tests/test_c_parser.dSYM/Contents/Resources/Relocations/aarch64/: test_c_parser.yml
src/AceAgent.Tools/CKG/native/wrapper/: ckg_wrapper.c  ckg_wrapper.h
tests/AceAgent.Tests/: AceAgent.Tests.csproj  AdvancedToolsTests.cs  BasicTests.cs  CLITests.cs  CoreInfrastructureTests.cs  CoreToolsTests.cs  LLMProviderTests.cs  TrajectoryRecordingTests.cs  UnitTest1.cs
